@@ -1,4 +1,3 @@
-
 <http://example.org/g1> {
 	<http://example.org/s1>
 		<http://example.org/p1> <http://example.org/o1> ;
