@@ -1,0 +1,6 @@
+Terse Test Suite
+================
+
+This suite tests "terse" mode, where Turtle and TriG are written with fewer
+newlines.  The inputs and outputs are the same: a file with the terse
+formatting expected from the writer.
